[gd_scene load_steps=2 format=3 uid="uid://cbdk0lmp3fv18"]

[ext_resource type="Script" uid="uid://cetpbqkt7cewd" path="res://scenes/interfaces/level_completed.gd" id="1_h2cqe"]

[node name="level_completed" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 656.0
offset_bottom = 496.0
script = ExtResource("1_h2cqe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.34901962)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -68.0
offset_right = 35.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LEVEL COMPLETED"

[node name="next_level" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next level"

[node name="levels" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Levels"

[node name="main_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[connection signal="pressed" from="VBoxContainer/next_level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="VBoxContainer/levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
